--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "hexlet-django-blog"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 django = "^4.1.6"
+python-dotenv = "^0.21.1"
 
 
 [build-system]
